--- a/edu/src/Sections/Header/styles.scss
+++ b/edu/src/Sections/Header/styles.scss
@@ -7,6 +7,7 @@
   overflow: hidden;
   width: 100%;
   @media only screen and (max-width: 1025px) {
+    padding-top: 90px;
     flex-wrap: wrap-reverse;
     align-items: center;
     justify-content: center;
