--- a/edu/src/Sections/Promo/styles.scss
+++ b/edu/src/Sections/Promo/styles.scss
@@ -149,3 +149,19 @@
     }
   }
 }
+
+.categories__filter {
+  display: flex;
+  gap: 30px;
+  cursor: pointer;
+  h4 {
+    font-size: 20px;
+    font-weight: 600;
+  }
+
+  .active {
+    border-bottom: solid rgb(17, 212, 251) 3px;
+    padding-bottom: 5px;
+    cursor: pointer;
+  }
+}
