--- a/edu/src/Sections/Promo/styles.scss
+++ b/edu/src/Sections/Promo/styles.scss
@@ -29,6 +29,7 @@
     @media screen and (max-width: 1025px) {
       width: 100%;
       height: 400px;
+      display: none !important;
     }
   }
 
@@ -154,14 +155,34 @@
   display: flex;
   gap: 30px;
   cursor: pointer;
+  @media screen and (max-width: 555px) {
+    flex-direction: column;
+    gap: 10px;
+    text-align: center;
+    padding: 0 15vw;
+    white-space: nowrap !important;
+  }
+  @media screen and (max-width: 450px) {
+    flex-direction: column;
+    justify-content: flex-start;
+    padding: 0;
+    text-align: left;
+    max-width: min-content;
+  }
   h4 {
     font-size: 20px;
     font-weight: 600;
+    border-bottom: solid rgb(17, 212, 251, 0) 3px;
+    -webkit-background-clip: padding-box;
+    background-clip: padding-box;
+    padding-bottom: 5px;
   }
 
   .active {
-    border-bottom: solid rgb(17, 212, 251) 3px;
-    padding-bottom: 5px;
+    border-bottom: solid rgb(17, 212, 251, 1) 3px;
     cursor: pointer;
+    transition: all ease 0.3s;
+    -webkit-background-clip: padding-box;
+    background-clip: padding-box;
   }
 }
