--- a/edu/src/Sections/Categories/styles.scss
+++ b/edu/src/Sections/Categories/styles.scss
@@ -1,31 +1,72 @@
-.category__section{
-    padding: 100px 0;
+.category__section {
+  padding: 100px 25px;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+
+  margin: 0 auto;
+  .category__title {
+    color: rgb(17, 212, 251);
+  }
+  .category_card {
+    width: auto;
+    height: 60px;
+    padding: 0px 20px;
+    background-color: rgba(0, 0, 0, 0.07);
+    border-radius: 40px;
     display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: 600;
+    margin: 10px 5px;
+    color: #081f51;
+    cursor: pointer;
+    text-align: center;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 2px 6px;
+  }
+  .categories_container {
+    // margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+  }
+}
+
+.categories__filter {
+  display: flex;
+  gap: 30px;
+  cursor: pointer;
+  white-space: nowrap;
+
+  @media screen and (max-width: 555px) {
     flex-direction: column;
-    width: 90%;
-    margin: 0 auto;
-    .category__title{
-        color:rgb(17, 212, 251);
-    }
-    .category_card{
-        width: auto;
-        height: 60px;
-        padding: 0px 20px;
-        background-color: rgba(0,0,0,.07);
-        border-radius: 40px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        font-weight: 600;
-        margin: 10px 5px;
-        color: #081f51;
-        cursor: pointer;
-        text-align: center;
-        box-shadow: rgba(0, 0, 0, 0.1) 0px 2px 6px;
-    }
-    .categories_container{
-        // margin: 0 auto;
-        display: flex;
-        flex-wrap: wrap;
-    }
+    gap: 10px;
+    text-align: left;
+    width: max-content;
+    // padding: 0 15vw;
+    // margin: 0;
+    // padding: 0;
+  }
+  @media screen and (max-width: 450px) {
+    flex-direction: column;
+    justify-content: flex-start;
+    padding: 0;
+    text-align: left;
+    max-width: min-content;
+  }
+  h4 {
+    font-size: 20px;
+    font-weight: 600;
+    border-bottom: solid rgb(17, 212, 251, 0) 3px;
+    -webkit-background-clip: padding-box;
+    background-clip: padding-box;
+    padding-bottom: 5px;
+  }
+
+  .active {
+    border-bottom: solid rgb(17, 212, 251, 1) 3px;
+    cursor: pointer;
+    transition: all ease 0.3s;
+    -webkit-background-clip: padding-box;
+    background-clip: padding-box;
+  }
 }
