--- a/edu/src/Sections/Promo/styles.scss
+++ b/edu/src/Sections/Promo/styles.scss
@@ -6,6 +6,7 @@
   padding-bottom: 0;
   @media screen and (max-width: 1025px) {
     flex-direction: column !important;
+    padding-top: 0px;
     .app__container {
       width: fit-content !important;
       margin: 0 !important;
@@ -36,16 +37,12 @@
   .app__container {
     width: 550px;
     min-height: 400px;
-    background-color: #f4f4f4;
+    background-color: #f1f1f1;
     margin-top: 80px;
     padding: 100px 50px;
     z-index: 2;
     margin-left: -270px;
-    @media screen and (max-width: 1025px) {
-      width: fit-content !important;
-      margin: 0 !important;
-      padding: 100px 25px !important;
-    }
+
     @media screen and (max-width: 550px) {
       padding: 80px 25px !important;
     }
@@ -148,41 +145,5 @@
     .google {
       min-width: 150px !important;
     }
-  }
-}
-
-.categories__filter {
-  display: flex;
-  gap: 30px;
-  cursor: pointer;
-  @media screen and (max-width: 555px) {
-    flex-direction: column;
-    gap: 10px;
-    text-align: center;
-    padding: 0 15vw;
-    white-space: nowrap !important;
-  }
-  @media screen and (max-width: 450px) {
-    flex-direction: column;
-    justify-content: flex-start;
-    padding: 0;
-    text-align: left;
-    max-width: min-content;
-  }
-  h4 {
-    font-size: 20px;
-    font-weight: 600;
-    border-bottom: solid rgb(17, 212, 251, 0) 3px;
-    -webkit-background-clip: padding-box;
-    background-clip: padding-box;
-    padding-bottom: 5px;
-  }
-
-  .active {
-    border-bottom: solid rgb(17, 212, 251, 1) 3px;
-    cursor: pointer;
-    transition: all ease 0.3s;
-    -webkit-background-clip: padding-box;
-    background-clip: padding-box;
   }
 }
