--- a/edu/src/Sections/WhereToLearn/styles.scss
+++ b/edu/src/Sections/WhereToLearn/styles.scss
@@ -8,64 +8,28 @@
   width: 100%;
   max-width: 100vw;
   position: relative;
-
   .learn__images__container {
-    // position: relative;
     .learn__images {
       position: absolute;
-
       &:first-child {
-        width: 370px;
-        height: 400px;
-        top: 100px;
-        right: 100px;
-        @media screen and (max-width: 1400px) {
-          width: 270px;
-          height: 300px;
-          right: 70px;
-        }
-        @media screen and (max-width: 1180px) {
-          width: 220px;
-          height: 300px;
-          right: 70px;
-        }
+        width: 250px;
+        height: 300px;
+        top: 150px;
+        right: 200px;
       }
       &:nth-child(2) {
-        width: 330px;
-        height: 400px;
-        top: 250px;
-        right: 380px;
+        width: 290px;
+        height: 300px;
+        top: 310px;
+        right: 350px;
         z-index: 2;
-        @media screen and (max-width: 1400px) {
-          width: 230px;
-          height: 300px;
-          top: 250px;
-          right: 280px;
-        }
-        @media screen and (max-width: 1180px) {
-          width: 230px;
-          height: 300px;
-          top: 220px;
-          right: 230px;
-        }
       }
       &:nth-child(3) {
-        width: 500px;
-        // height: 400px;
+        width: 400px;
+        height: 270px;
         z-index: 3;
-        top: 530px;
-        right: 60px;
-        @media screen and (max-width: 1400px) {
-          height: 250px;
-          width: 400px;
-          top: 430px;
-          right: 30px;
-        }
-        @media screen and (max-width: 1180px) {
-          height: 250px;
-          width: 400px;
-          top: 430px;
-        }
+        top: 480px;
+        right: 160px;
       }
       @media screen and (max-width: 1025px) {
         position: static;
@@ -75,7 +39,7 @@
         }
 
         &:nth-child(3) {
-          width: 100vw;
+          width: 100%;
           height: 100%;
         }
       }
@@ -197,6 +161,49 @@
       p {
         font-size: 14px;
       }
+    }
+  }
+}
+
+@media screen and (max-width: 1400px) {
+  .learn__images {
+    &:first-child {
+      right: 100px !important;
+    }
+    &:nth-child(2) {
+      right: 250px !important;
+    }
+    &:nth-child(3) {
+      right: 60px !important;
+    }
+  }
+}
+
+@media screen and (max-width: 1200px) {
+  .learn__images {
+    &:first-child {
+      width: 250px !important;
+      height: 210px !important;
+      top: 250px !important;
+      right: 100px !important;
+    }
+    &:nth-child(2) {
+      width: 190px !important;
+      height: 250px !important;
+      top: 370px !important;
+      right: 250px !important;
+    }
+    &:nth-child(3) {
+      width: 300px !important;
+      height: 170px !important;
+    }
+  }
+}
+@media screen and (max-width: 1025px) {
+  .learn__images {
+    &:nth-child(3) {
+      min-width: 100vw !important;
+      height: 400px !important;
     }
   }
 }
