find a teacher section

--- a/edu/src/_variables.scss
+++ b/edu/src/_variables.scss
@@ -8,6 +8,10 @@ $grey: #b5b5c3cc;
 $p_color: #5b5e60;
 $lesson_color: #3f4254;
 $related__lesson__bg: #f3f6f9;
+$category_card: #f5f8fa;
+$category_card_color: #5e6278;
+
+$selectedHeader: #ffa800;
 //gradient colors
 $gradient_gold: #ffc542;
 $gradient_light_gold: #ffecbf;
