--- a/edu/src/Components/Category/styles.scss
+++ b/edu/src/Components/Category/styles.scss
@@ -1,18 +1,18 @@
-.category_card{
-    width: 130px;
-    height: 60px;
-    padding: 0px 5px;
-    background-color: #dedede;
-    border-radius: 40px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-weight: 600;
-    margin: 5px;
-    cursor: pointer;
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+// .category_card{
+//     width: 130px;
+//     height: 60px;
+//     padding: 0px 5px;
+//     background-color: #dedede;
+//     border-radius: 40px;
+//     display: flex;
+//     justify-content: center;
+//     align-items: center;
+//     font-weight: 600;
+//     margin: 5px;
+//     cursor: pointer;
+//     box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
 
-    .category__name{
-        text-align: center;
-    }
-}
+//     .category__name{
+//         text-align: center;
+//     }
+// }
