--- a/edu/src/Sections/WhereToLearn/wheretolearn.styles.scss
+++ b/edu/src/Sections/WhereToLearn/wheretolearn.styles.scss
@@ -97,9 +97,13 @@
     .col1 {
       h1 {
         font-size: $header_xs;
+        max-width: 400px;
+        text-align: center;
       }
       p {
         width: auto;
+        max-width: 400px;
+        text-align: center;
       }
       padding: 20px;
     }
