--- a/edu/src/_variables.scss
+++ b/edu/src/_variables.scss
@@ -10,7 +10,7 @@ $lesson_color: #3f4254;
 $related__lesson__bg: #f3f6f9;
 $category_card: #f5f8fa;
 $category_card_color: #5e6278;
-
+$footer_bg: #13263c;
 $selectedHeader: #ffa800;
 //gradient colors
 $gradient_gold: #ffc542;
@@ -38,3 +38,8 @@ $newsletter_header_size: 25px;
 
 $lesson_title_size: 18px;
 $realted__lesson_title_size: 20px;
+
+//Footer text
+$footer_text: 11px;
+$footer_header: 15px;
+$footer_text_md: 15px;
