--- a/edu/src/Sections/Footer/Footer.styles.scss
+++ b/edu/src/Sections/Footer/Footer.styles.scss
@@ -1,437 +1,175 @@
-.Info_Container {
+@import "../../variables.scss";
+.bottom__section {
   display: flex;
-  min-height: 200px;
   justify-content: space-between;
-  a {
-    color: #081f51;
-    cursor: pointer;
+  background-color: $accentblue;
+  color: $white;
+  padding: 20px;
+  max-height: 60px;
+  align-items: center;
+  p {
+    margin: 0;
   }
-  .ContactInfo {
-    padding: 0 20px;
-    .footer__socials {
-      display: grid;
-      //   justify-content: space-between;
-      grid-template-columns: repeat(3, 50px);
-      grid-gap: 10px;
-      padding-top: 20px;
-      svg {
-        font-size: 20px;
-      }
-
-      a {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 50px;
-        height: 50px;
-        border-radius: 50%;
-        background-color: #f1f1f1;
-        margin: 0 5px;
-        transition: all ease 0.2s;
-        &:hover {
-          background-color: #081f51;
-          transition: all ease 0.2s;
-          color: #fff;
-        }
-      }
-    }
-    .footer__col {
-      display: flex;
-      align-items: center;
-      gap: 10px;
-      color: #081f51;
-      font-size: 16px;
-      padding: 5px 0;
-    }
-    display: flex;
-    flex-direction: column;
-    a {
-      display: flex;
-      align-items: center;
-      .icons {
-        margin-right: 30px;
-      }
-    }
-  }
-}
-.Footer_Container {
-  background-color: #f7f7f7;
-  color: #081f51;
-  display: flex;
-  flex-direction: column;
-  padding: 140px 5vw 0;
-  overflow: hidden;
-  h1 {
-    margin: 0px;
-    margin-bottom: 20px;
-  }
-  a {
-    text-decoration: none;
-  }
-}
-.Footer_Copyright {
-  padding-top: 100px;
-  padding-bottom: 60px;
-  align-self: center;
-}
-.Footer_Column {
-  padding: 0 20px;
-  display: flex;
-  flex-direction: column;
-  gap: 30px;
-  h1 {
-    height: 25px;
-  }
-}
-
-.Footer_icons {
-  margin-right: 20px;
-  transform: scale(1.3);
-  cursor: pointer;
-}
-a:hover {
-  color: rgb(21, 151, 229);
-}
-.Footer_icons:hover {
-  color: rgb(21, 151, 229);
-  animation: grow;
-  animation-duration: 1s;
-  animation-direction: alternate;
-}
-.Logos_Container {
-  display: flex;
-  padding: 0 10px;
-  flex-direction: column;
-  .title {
-    display: flex;
-    flex-direction: column;
-    // align-items: center;
-    font-size: 18px;
-    font-family: "Raleway", sans-serif;
-    margin-bottom: 20px;
-    h2 {
-      margin: 0;
-    }
-    .Footer_logo {
-      height: 50px;
-    }
-  }
-  .send__email {
-    background-color: #fff !important;
-    width: 260px;
-    height: 60px;
-    // padding: 15px 35px;
-    border-radius: 3px;
-    border: #11d4fb solid 1px;
+  .socials {
     display: flex;
     justify-content: space-between;
-    align-items: center;
-    padding-left: 30px;
-
-    input {
-      width: 90%;
-      height: 90%;
-      border: none;
-      color: rgb(0, 0, 0, 0.5);
-      outline: none;
-    }
-    .email__icon {
-      min-height: 100%;
-      width: 80px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      transition: all ease 0.3s;
-      background-color: #11d4fb;
-      border: #11d4fb solid 1px;
-      border-right: none;
-      cursor: pointer;
-
-      &:hover {
-        background-color: #fff;
-        border: #11d4fb solid 1px;
-        border-right: none;
-      }
-      &:hover > svg {
-        color: #11d4fb;
-        transition: all ease 0.3s;
-      }
-      svg {
-        cursor: pointer;
-        transition: all ease 0.3s;
-        color: #fff;
-      }
+    gap: 30px;
+    img {
+      width: 25px;
     }
   }
 }
-.Logos {
+.footer__container {
+  background-color: $footer_bg;
+  // width: calc(100% - 130px);
+  background-color: 500px;
+  padding: 85px 65px;
+  padding-right: 20px;
   display: flex;
-  justify-content: flex-start;
-}
-@keyframes grow {
-  0% {
-    color: white;
-    transform: scale(1.5);
+  .footer__logo {
+    display: flex;
+    flex-direction: column;
+    img {
+      width: 105px;
+      height: 42px;
+    }
+    p {
+      width: 400px;
+      color: $lesson_p_color;
+      font-size: $p_xs;
+    }
   }
-  100% {
-    color: rgb(21, 151, 229);
-    transform: scale(1.5);
-  }
-}
-// ----------------- Media Query ------------------- //
+  .columns {
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+    align-self: center;
+    justify-self: center;
 
-@media only screen and (max-width: 1250px) {
-  .Footer_Container {
-    padding: 120px 3vw 0;
-    .Info_Container {
-      .Footer_Column,
-      .ContactInfo,
-      .Logos_Container {
-        h1 {
-          font-size: 25px;
+    .col {
+      display: flex;
+      flex-direction: column;
+      // align-items: center;
+      ul {
+        padding: 0;
+        li {
+          margin: 0;
+          display: flex;
+          align-items: center;
+          gap: 8px;
+          list-style: none;
+          color: $lesson_p_color;
+          font-size: $footer_text;
+          padding: 10px 0;
+          font-weight: 500;
+          a {
+            text-decoration: none;
+            color: $lesson_p_color;
+          }
         }
-        h2 {
-          font-size: 23px;
-        }
+      }
+      h4 {
+        color: $white;
+        font-size: $footer_header;
+        margin: 0;
+        font-weight: 600;
       }
     }
   }
 }
 
-@media only screen and (max-width: 1190px) {
-  .Footer_Container {
-    // padding: 80px 5vw 0;
-    .Info_Container {
-      .Footer_Column {
-        gap: 10px;
-      }
-      .Footer_Column,
-      .ContactInfo,
-      .Logos_Container {
-        h1 {
-          font-size: 25px;
-        }
-        h2 {
-          font-size: 23px;
-        }
-      }
-    }
+@media screen and (max-width: 1050px) {
+  .bottom__section {
+    flex-direction: column-reverse;
+    height: auto;
   }
-
-  .send__email {
-    width: 170px !important;
-    height: 50px !important;
-    padding-left: 20px !important;
-
-    .email__icon {
-      width: 50px !important;
+  .footer__container {
+    display: flex;
+    flex-direction: column;
+    .footer__logo {
+      display: flex;
+      flex-direction: column;
+      margin-top: -30px;
+      img {
+        width: 105px;
+        height: 42px;
+      }
+      p {
+        width: auto;
+        font-size: $footer_text_md;
+      }
+      padding: 30px 0;
     }
-  }
-}
-
-// @media only screen and (max-width: 1039px) {
-//   .Info_Container {
-//     .ContactInfo {
-//       a {
-//         .icons {
-//           margin-right: 10px;
-//         }
-//       }
-//     }
-//   }
-//   .Footer_Container {
-//     padding: 80px;
-//   }
-//   .Logos_Container {
-//     .title {
-//       .Footer_logo {
-//         height: 35px;
-//       }
-//     }
-//   }
-
-//   .Footer_Copyright {
-//     padding-top: 70px;
-//     padding-bottom: 0px;
-//     margin-bottom: 0;
-//   }
-//   .Footer_Column {
-//     h1 {
-//       height: 0px;
-//     }
-//   }
-// }
-@media only screen and (max-width: 910px) {
-  .Footer_Container {
-    padding: 80px 5vw 0;
-    .Info_Container {
+    .columns {
       display: grid;
+      width: 100%;
+      align-self: center;
+      justify-self: center;
       grid-template-columns: repeat(2, 1fr);
-      grid-row-gap: 50px;
-      justify-content: center;
-      .Footer_Column {
-        padding: 0;
-        gap: 10px;
-      }
-      .Logos_Container {
-        padding: 0;
-      }
-      .ContactInfo {
-        padding: 0;
-      }
-      .Footer_Column,
-      .ContactInfo,
-      .Logos_Container {
-        h1 {
-          font-size: 25px;
+      .col {
+        ul {
+          padding: 0;
+          li {
+            margin: 0 !important;
+
+            list-style: none;
+            color: $lesson_p_color;
+            font-size: $footer_text_md;
+            padding: 10px 0;
+            font-weight: 700;
+          }
         }
-        h2 {
-          font-size: 23px;
+        h4 {
+          color: $white;
+          font-size: 16px;
+          margin: 0;
         }
       }
     }
   }
-  .send__email {
-    width: 180px !important;
-    height: 50px !important;
-    padding-left: 20px !important;
-
-    .email__icon {
-      width: 70px !important;
+  .bottom__section {
+    display: flex;
+    justify-content: space-between;
+    background-color: $accentblue;
+    color: $white;
+    padding: 30px;
+    height: auto;
+    p {
+      margin: 0;
+    }
+    gap: 20px;
+    .socials {
+      width: 350px;
+      display: flex;
+      justify-content: space-between;
+      gap: 30px;
+      img {
+        width: 25px;
+      }
     }
   }
 }
 
-@media only screen and (max-width: 750px) {
-  .Footer_Container {
-    padding: 80px 5vw 0;
-    .Info_Container {
+@media screen and (max-width: 600px) {
+  .footer__container {
+    padding: 80px 20px;
+    width: auto;
+  }
+}
+@media screen and (max-width: 400px) {
+  .bottom__section {
+    padding: 20px;
+    .socials {
+      width: auto;
       display: grid;
-      grid-template-columns: repeat(2, 280px) !important;
-      grid-row-gap: 50px;
-      justify-content: center;
-      .Footer_Column {
-        padding: 0;
-        gap: 10px;
-      }
-      .ContactInfo {
-        padding: 0;
-      }
-      .Footer_Column,
-      .ContactInfo,
-      .Logos_Container {
-        h1 {
-          font-size: 25px;
-        }
-        h2 {
-          font-size: 23px;
-        }
-      }
+      grid-template-columns: repeat(3, 1fr);
     }
   }
-}
-
-@media only screen and (max-width: 610px) {
-  .Footer_Container {
-    padding: 80px 5vw 0;
-    .Info_Container {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      .Footer_Column {
-        padding: 0;
-        gap: 10px;
-      }
-      .ContactInfo {
-        padding: 0;
-        .footer__socials {
-          grid-template-columns: repeat(auto-fill, 50px);
-        }
-      }
-      .Footer_Column,
-      .ContactInfo,
-      .Logos_Container {
-        h1 {
-          font-size: 30px;
-        }
-        h2 {
-          font-size: 28px;
-        }
-        .send__email {
-          background-color: #fff !important;
-          width: 260px !important;
-          // padding: 15px 35px;
-          border-radius: 3px;
-          border: #11d4fb solid 1px;
-          display: flex;
-          justify-content: space-between;
-          align-items: center;
-          padding-left: 30px;
-
-          input {
-            width: 90%;
-            height: 90%;
-            border: none;
-            color: rgb(0, 0, 0, 0.5);
-            outline: none;
-          }
-          .email__icon {
-            min-height: 100%;
-            width: 80px !important;
-          }
-        }
-      }
-    }
-  }
-}
-
-@media only screen and (max-width: 330px) {
-  .Footer_Container {
-    padding: 80px 5vw 0;
-    .Info_Container {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      .Footer_Column {
-        padding: 0;
-        gap: 10px;
-      }
-      .ContactInfo {
-        padding: 0;
-      }
-      .Footer_Column,
-      .ContactInfo,
-      .Logos_Container {
-        h1 {
-          font-size: 30px;
-        }
-        h2 {
-          font-size: 28px;
-        }
-        .send__email {
-          background-color: #fff !important;
-          width: 200px !important;
-          // padding: 15px 35px;
-          border-radius: 3px;
-          border: #11d4fb solid 1px;
-          display: flex;
-          justify-content: space-between;
-          align-items: center;
-          padding-left: 30px;
-
-          input {
-            width: 90%;
-            height: 90%;
-            border: none;
-            color: rgb(0, 0, 0, 0.5);
-            outline: none;
-          }
-          .email__icon {
-            min-height: 100%;
-            width: 50px !important;
-          }
-        }
-      }
+  .footer__container {
+    padding: 80px 20px;
+    width: auto;
+    .columns {
+      grid-template-columns: repeat(1, 1fr);
     }
   }
 }
