--- a/edu/src/_variables.scss
+++ b/edu/src/_variables.scss
@@ -19,10 +19,13 @@ $lesson_p_color: #7e8299;
 $see_all: #3f4254;
 
 //headers
-$header_size: 50px;
+$header_size: 52px;
 $font_medium: 40px;
 $font_small: 29px;
-$font_list: 16px;
+$font_list: 15px;
+$header_md: 35px;
+$header_p: 15px;
+
 $header_s: 30px;
 $header_xs: 24px;
 $header_weight: 700;
