--- a/edu/src/Sections/Header/header.styles.scss
+++ b/edu/src/Sections/Header/header.styles.scss
@@ -5,9 +5,9 @@
   display: flex;
   overflow: hidden;
   justify-content: flex-start;
-  background-image: url("../../assets/images/Mask\ group.png");
+  background-image: url("../../assets/images/headerbg.png");
   background-repeat: no-repeat;
-  background-size: 90% 90%;
+  background-size: 100% 98%;
   background-position: center;
   justify-content: space-around;
   position: sticky;
@@ -36,6 +36,8 @@
     p {
       color: $p_color;
       font-weight: 600;
+      font-size: $header_p;
+      line-height: 150%;
     }
     .header__inputs {
       padding-top: 50px;
@@ -53,7 +55,7 @@
         border-image-slice: 3;
         height: 120px;
         width: 300px;
-        height: 50px;
+        height: 62px;
         padding-left: 10px;
         border-radius: 6px;
         outline: none;
@@ -64,21 +66,26 @@
         }
       }
       button {
-        width: 70px;
-        height: 58px;
+        width: 77px;
+        height: 70px;
         background-color: $gold;
         border: none;
         border-radius: 6px;
         cursor: pointer;
+        padding: 20px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
         img {
-          width: 40px;
+          min-width: 30px;
         }
       }
     }
   }
   .header__bg__image {
     img {
-      width: 600px;
+      width: 85%;
+      max-width: 700px;
     }
   }
   .highlighted {
@@ -90,6 +97,7 @@
     width: 550px;
     color: $darkblue;
     margin: 0;
+    line-height: 110%;
   }
 }
 
@@ -137,14 +145,15 @@
       }
     }
     .subtitle {
-      font-size: $font_medium !important;
+      font-size: $header_md !important;
       width: 420px !important;
     }
   }
   .header__img {
     .kickstart {
-      width: 150px !important;
-      height: 80px !important;
+      // width: 150px !important;
+      // height: 80px !important;
+      width: 75%;
     }
     .rocket {
       width: 100px;
@@ -225,7 +234,7 @@
   .header__container {
     padding: 5px;
     padding-top: 140px;
-    padding-left: 10px;
+    padding-left: 30px;
     .subtitle {
       width: 450px;
     }
@@ -245,6 +254,7 @@
 @media screen and (max-width: 450px) {
   .header__container {
     padding: 5px;
+    padding-left: 15px;
     padding-top: 140px;
 
     .subtitle {
