--- a/edu/src/Sections/OurCourses/ourCourses.styles.scss
+++ b/edu/src/Sections/OurCourses/ourCourses.styles.scss
@@ -68,7 +68,9 @@
         width: 90%;
         align-items: flex-start;
         margin: 0 auto;
-
+        a:visited {
+          color: $accentblue;
+        }
         h1 {
           margin-top: -18px;
           background-color: $white;
@@ -76,6 +78,7 @@
           font-size: $lesson_header_size;
           text-transform: uppercase;
           font-weight: $header_weight;
+          line-height: 120%;
         }
         span {
           margin-top: -18px;
