--- a/edu/src/Sections/Categories/categories.styles.scss
+++ b/edu/src/Sections/Categories/categories.styles.scss
@@ -3,13 +3,19 @@
   padding: 50px;
   display: flex;
   flex-direction: column;
-  max-width: 80%;
-
+  max-width: 90%;
+  background-image: url("../../assets/images/teacherbg.png");
+  background-size: cover;
+  background-position: 100%;
   .headers {
     display: flex;
     gap: 30px;
     margin-bottom: 50px;
     color: $darkblue;
+
+    .invert {
+      rotate: 180deg;
+    }
     h2 {
       color: $darkblue;
       font-weight: 600;
@@ -55,7 +61,7 @@
 
     .select__container {
       width: 300px;
-      padding: 20px;
+      padding: 15px 20px;
       // height: 50px;
       background-color: #f4f8fc;
       border-radius: 8px;
@@ -69,7 +75,7 @@
         width: 100%;
         margin-left: 50px;
         outline: none;
-        font-size: $lesson_title_size;
+        font-size: 23px;
         font-weight: 700;
         color: rgba(0, 0, 0, 0.3);
       }
@@ -116,7 +122,7 @@
       }
       .cities {
         display: flex;
-        max-width: 80%;
+        max-width: 90%;
         flex-wrap: wrap;
         margin-top: 50px;
         .category_card {
@@ -155,7 +161,9 @@
     .lesson {
       display: flex;
       flex-direction: column;
-      width: 150px;
+      min-width: 130px;
+      max-width: 155px;
+      max-height: 96px;
       background: $related__lesson__bg;
       border-radius: 10px;
       align-items: center;
@@ -181,19 +189,93 @@
     margin: 0 auto;
   }
 }
-// .headers > h2:not(.selected) {
-//   opacity: 0.3;
-// }
+
+@media screen and (max-width: 400px) {
+  .category__section {
+    .filter__search {
+      .search {
+        width: 190px !important;
+      }
+    }
+  }
+  .teacher__section__container {
+    .findateacher__section {
+      .select__container {
+        select {
+          padding: 0;
+          margin-left: auto;
+        }
+      }
+    }
+  }
+}
+@media screen and (max-width: 500px) {
+  .findateacher__section {
+    .select__container {
+      select {
+        font-size: $select_sm !important;
+      }
+    }
+  }
+}
+@media screen and (max-width: 350px) {
+  .findateacher__section {
+    .select__container {
+      select {
+        font-size: 12px !important;
+      }
+    }
+  }
+}
 @media screen and (max-width: 975px) {
   .category__section {
-    // .teacher__section__container:has(.selected) {
-    //   display: none;
-    // }
-    // .privates__lessons:has(.selected) {
-    //   display: none;
-    // }
+    .privates__lessons {
+      .lesson__category {
+        .details {
+          overflow-x: scroll;
+          flex-wrap: nowrap;
+          margin-bottom: 20px;
+          .lesson {
+            height: 50px !important;
+            width: 10px !important;
+            min-width: 130px;
+            // max-width: 15px;
+          }
+        }
+      }
+    }
+    .filter__search {
+      .search {
+        width: 200px;
+        input {
+          &::placeholder {
+            font-size: 12px !important;
+          }
+        }
+      }
+    }
+    .teacher__section__container {
+      .findateacher__section {
+        .select__container {
+          height: 20px;
+          padding: 12px;
+        }
+        button {
+          width: 52px;
+          height: 45px;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+        }
+      }
+    }
+    padding: 30px;
     .headers {
       flex-direction: column;
+      gap: 0;
+      h2 {
+        font-size: $realted__lesson_title_size;
+      }
       .selected {
         &::before {
           content: none;
