--- a/edu/src/Sections/NewsLetter/newsletter.styles.scss
+++ b/edu/src/Sections/NewsLetter/newsletter.styles.scss
@@ -1,7 +1,7 @@
 @import "../../variables.scss";
 .newsletter__container {
   width: 80%;
-  margin: 0 auto;
+  margin: 100px auto;
   padding: 40px;
   background: linear-gradient(90deg, #0ba5df 0%, #37cef5 100%);
   box-shadow: 0px 10px 60px rgba(15, 15, 15, 0.08);
@@ -9,9 +9,6 @@
   color: $white;
   display: flex;
   align-items: center;
-  margin: auto;
-  margin-bottom: 30px;
-  margin-top: 30px;
 
   h1 {
     font-size: $header_s;
