--- a/edu/src/_variables.scss
+++ b/edu/src/_variables.scss
@@ -5,6 +5,7 @@ $nav_title: #43d7fa;
 $gold: #ffc542;
 $white: #fff;
 $grey: #b5b5c3cc;
+$rating_color: #b5b5c3;
 $p_color: #5b5e60;
 $lesson_color: #3f4254;
 $related__lesson__bg: #f3f6f9;
@@ -12,12 +13,12 @@ $category_card: #f5f8fa;
 $category_card_color: #5e6278;
 $footer_bg: #13263c;
 $selectedHeader: #ffa800;
+$related__lesson__border: #e4e6ef;
 //gradient colors
 $gradient_gold: #ffc542;
 $gradient_light_gold: #ffecbf;
 $lesson_p_color: #7e8299;
 $see_all: #3f4254;
-
 //headers
 $header_size: 52px;
 $font_medium: 40px;
@@ -25,6 +26,8 @@ $font_small: 29px;
 $font_list: 15px;
 $header_md: 35px;
 $header_p: 15px;
+$select_text: 23px;
+$select_sm: 16px;
 
 $header_s: 30px;
 $header_xs: 24px;
