--- a/edu/src/Sections/OurCourses/ourCourses.styles.scss
+++ b/edu/src/Sections/OurCourses/ourCourses.styles.scss
@@ -30,13 +30,15 @@
     text-align: center;
   }
   .lesson__category__container {
-    width: 100%;
+    width: 80%;
     height: 100%;
+    margin: 0 auto;
     position: relative;
     .lesson__category {
       display: flex;
       flex-direction: column;
-      width: 1150px;
+      width: auto;
+      max-width: 1150px;
       height: 100%;
       margin: 0 auto;
       background-image: url("data:image/svg+xml,%3csvg width='100%25' height='85' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='24' ry='24' stroke='%23333' stroke-width='3' stroke-dasharray='6%2c 14' stroke-dashoffset='35' stroke-linecap='square'/%3e%3c/svg%3e");
@@ -51,7 +53,7 @@
         margin-left: -40px;
         margin-right: -40px;
         display: flex;
-        overflow: hidden;
+        overflow-x: scroll;
         gap: 30px;
         transition: all ease-in-out 0.3s;
         padding-bottom: 80px;
@@ -98,5 +100,27 @@
   .lessons__section {
     max-width: 1500px;
     margin: 0 auto;
+  }
+}
+@media screen and (max-width: 975px) {
+  .lessons__section {
+    max-width: 95%;
+    .lesson__category__container {
+      width: 85%;
+      .lesson__category {
+        background-image: none;
+        .lessons {
+          margin-top: 0;
+        }
+        .lesson__category__title {
+          width: 100%;
+          h1,
+          span {
+            margin: 0;
+            text-transform: capitalize;
+          }
+        }
+      }
+    }
   }
 }
