--- a/edu/src/Sections/Header/header.styles.scss
+++ b/edu/src/Sections/Header/header.styles.scss
@@ -14,7 +14,7 @@
   overflow: hidden;
   padding: 30px;
   font-weight: bold !important;
-  padding-top: 140px;
+  padding-top: 140px !important;
   .header__img {
     display: flex;
     align-items: center;
@@ -273,10 +273,12 @@
     width: 90%;
   }
   .header__container {
-    padding: 5px;
-    padding-top: 140px;
-    padding-left: 20px;
-    padding-right: 0;
+    // padding: 5px;
+    // padding-top: 140px;
+    // padding-left: 20px;
+    max-width: calc(100% - 40px);
+    padding: 20px;
+
     .subtitle {
       width: 450px;
     }
@@ -302,6 +304,7 @@
     .header__phrase {
       .subtitle {
         font-size: $header_xs !important;
+        min-width: 260px;
       }
     }
   }
